src/objects/Turbo_Edition_Rates__c.object
<CustomObject>
    <description>A lookup table for the various rates of the turbo editions based on the license unit selected.</description>
    <fields>
        <fullName>License_Entity__c</fullName>
        <label>License Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pricing_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Turbo Edition Rates</relationshipLabel>
        <relationshipName>Turbo_Edition_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Turbo Edition Rates</label>
    <nameField>
        <label>Turbo Edition Rates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Turbo Edition Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>